[donut] fix dark mode button hover background color

--- a/donut.hackercamp.cz/src/stylesheets/admin.scss
+++ b/donut.hackercamp.cz/src/stylesheets/admin.scss
@@ -12,6 +12,7 @@
     --md-list-item-list-item-hover-label-text-color: var(--hc-text-color);
     --md-list-item-list-item-hover-state-layer-color: var(--hc-text-color);
     --mdc-theme-surface: var(--hc-background-color);
+    --md-sys-color-on-surface-variant: var(--hc-text-color);
   }
 }
 
